--- a/README
+++ b/README
@@ -1,5 +1,7 @@
 Jarvis
-A simple chatbot written in Python.
+A very simple AI-based personal assistant written in Python.
+
+See http://projects.ajminich.com/index.php?title=Jarvis for more details.
 
 Requirements:
 - xmpp
