--- a/README
+++ b/README
@@ -4,5 +4,13 @@ A very simple AI-based personal assistant written in Python.
 See http://projects.ajminich.com/index.php?title=Jarvis for more details.
 
 Requirements:
-- xmpp
+- xmpppy (Python package for xmpp)
 
+Plans:
+- incorporate some sort of NLP
+
+Completed:
+- include start messages ("Good day sir") and stop messages ("Enjoy your day, sir.")
+- write log messages to output logfile
+- change structure to more object-oriented
+- automatically creates log folder if it doesn't exist
