--- a/README
+++ b/README
@@ -1,16 +1,4 @@
 Jarvis
-A very simple AI-based personal assistant written in Python.
+A text and speech recognition-based personal assistant.
 
 See http://projects.ajminich.com/index.php?title=Jarvis for more details.
-
-Requirements:
-- xmpppy (Python package for xmpp)
-
-Plans:
-- incorporate some sort of NLP
-
-Completed:
-- include start messages ("Good day sir") and stop messages ("Enjoy your day, sir.")
-- write log messages to output logfile
-- change structure to more object-oriented
-- automatically creates log folder if it doesn't exist
